# agent_construct

./: .gitignore  .gitmodules  CMakeLists.txt  Licenses  README.md  beon_charter  makefile  todo
Beon/Shaders/: Guidline
Beon/headers/: CameraController.hpp  IndexBuffer.hpp  Object.hpp  Plane.hpp  Render.hpp  Renderable.hpp  Renderer.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  WindowManager.hpp  beon.hpp  camera.hpp  controls.hpp  mesh.hpp  model.hpp  objloader.hpp  shader.hpp
Beon/shaders/: CodeMaterialShader.frag  CodeMaterialShader.vert  CubeMap.vert  TextureFragmentShader.frag  TransformVertexShader.vert
Beon/src/: Model.cpp  Object.cpp  VertexBufferLayout.cpp  controls.cpp  delete_me.cpp  main.cpp  shader.cpp  texture.cpp
